--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Muxutruk 156070698+Muxutruk2@users.noreply.github.com"]
 description = "Rust code disformatter"
+license = "MIT"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
